# youapply

./: .gitignore  .replit  README.md  cert.pem  key.pem  main.py  models.py  pasted_text_1726029963681.txt  pasted_text_1726033020201.txt  pyproject.toml  replit.nix
backup_20240911_075953/: environment_variables.txt
backup_20240911_075953/backup_20240911_075953/static/js/: admin.js
backup_20240911_075953/backup_20240911_075953/templates/: base.html  dashboard.html
backup_20240911_081502/: environment_variables.txt
backup_20240911_081502/backup_20240911_075953/: automated_application.py
backup_20240911_081502/backup_20240911_081502/: job_matching.py
backup_20240911_081502/backup_20240911_081502/backup_20240911_075953/templates/: profile.html
backup_20241002_070736/: auth.py  environment_variables.txt
backup_20241002_070736/backup_20240911_075953/: config.py  create_backup.py
backup_20241002_070736/backup_20240911_075953/backup_20240911_075953/: admin.py
backup_20241002_070736/backup_20240911_075953/backup_20240911_075953/templates/: admin.html
backup_20241002_070736/backup_20240911_075953/openai_chat_completion/: chat_request.py
backup_20241002_070736/backup_20240911_081502/backup_20240911_081502/: main.py  models.py
backup_20241002_070736/backup_20240911_081502/backup_20240911_081502/backup_20240911_075953/backup_20240911_075953/: main.py
backup_20241002_070736/backup_20241002_070736/templates/: base.html
openai_chat_completion/: chat_request.py
static/css/: styles.css
templates/: base.html  dashboard.html  index.html  profile.html
(+6 files in other folders)
