[tool.poetry]
name = "repl-nix-youapplyai-automator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
trafilatura = "^1.12.2"
openai = "^1.44.1"
flask-mail = "^0.10.0"
selenium = "^4.24.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
apscheduler = "^3.10.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
